# coq

./: .gitignore  .gitlab-ci.yml  Makefile.dune  coq-hott.opam  coqide.install  dune-project
.github/workflows/: ci-macos.yml  ci.yml
checker/: checker.ml
clib/: cList.ml  cList.mli
dev/bench/: dune  render_line_results.ml  render_results.ml  table.ml  tail_list.ml  tail_list.mli
dev/doc/: INSTALL.make.md
doc/: dune
doc/changelog/08-vernac-commands-and-options/: 16004-pr-Alizter-16004.rst
doc/sphinx/proofs/automatic-tactics/: auto.rst
doc/sphinx/user-extensions/: syntax-extensions.rst
doc/tools/docgram/: fullGrammar  orderedGrammar
ide/coqide/: coqide.ml  coqide_main.ml  ideutils.ml  ideutils.mli  session.ml
kernel/: constr.ml  constr.mli
plugins/ltac/: comRewrite.ml  g_ltac.mlg  pptactic.ml  rewrite.ml
pretyping/: detyping.ml
proofs/: goal_select.ml  goal_select.mli
test-suite/: README.new.md  dune  test_suite_rules.sexp
test-suite/cram/: coqtop-async-color.t  dune
test-suite/micromega/: .copy.csdp.cache  dune
test-suite/misc/: 11170.sh  13330.sh  4722.sh  7393.sh  7595.sh  7704.sh  bug_14550.sh  coq_environment.sh  coqc_dash_o.sh  coqc_dash_vok.sh  coqtop_print-mod-uid.sh  deps-checksum.sh  deps-order-distinct-root.sh  deps-order-from.sh  deps-order-subdir1-file.sh  deps-order-subdir2-file.sh  deps-order-subdir3-file.sh  deps-order.sh  deps-utf8.sh  exitstatus.sh  external-deps.sh  print-assumptions-vok.sh  printers.sh  quick-include.sh  redirect_printing.sh  universes.sh  vio_checking.sh
test-suite/output/: PrintNotation.out  PrintNotation.v  UnificationEvar.v  bug_15813.out  bug_15813.v
test-suite/prerequisite/: dune
test-suite/tools/: complexity.sh
test-suite/tools/gen_rules/: coqRules.ml  coqRules.mli  coqdep.ml  coqdep.mli  dir.ml  dune  dune.ml  dune.mli  gen_rules.ml
test-suite/unit-tests/: utest_rules.sexp
theories/: TestExample.v
theories/Classes/: CMorphisms.v  CRelationClasses.v
theories/Init/: BaseN.v
tools/cmdliner-compat/: cmdliner_compat.ml  cmdliner_compat.mli  dune
tools/configure/: configure.ml
tools/coqdep/: coqdep.ml
tools/coqdep/coqdeplib/: error.mli
tools/coqdep/lib/: args.ml  args.mli  dune
tools/coqmod/: README.md  coqmod.ml  lexer.mll  token.ml
tools/coqmod/test-coqmod.t/: Syntax.v  TestAll.v  run.t
tools/dune_rule_gen/: coq_rules.ml
toplevel/: coqtop.ml
vernac/: classes.ml  classes.mli  comArguments.ml  comAssumption.ml  comProgramFixpoint.ml  declare.ml  metasyntax.mli  prettyp.ml  record.ml  vernacentries.ml
