(rule
 (alias csdp-cache)
 ; The universe dep ensures we always run this rule and that dune cache doesn't
 ; pick it up
 (deps (universe) .csdp.cache.test-suite)
 (action (progn
  ; It is important we don't add .csdp.cache as a target or else dune will scrub
  ; its write permissions
  (no-infer (copy .csdp.cache.test-suite .csdp.cache))
  (run chmod +w .csdp.cache))))
